--- a/prueba2_cuauhtemoc/prueba2_cuauhtemoc/test/fixtures/operations.yml
+++ b/prueba2_cuauhtemoc/prueba2_cuauhtemoc/test/fixtures/operations.yml
@@ -3,11 +3,14 @@
 one:
   job: MyString
   worker_id: 1
+  inventory_id: 1
 
 two:
   job: MyString
   worker_id: 1
+  inventory_id: 1
 
 three:
   job: MyString
   worker_id: 1
+  inventory_id: 1
